<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SnapShare</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_logout_lable">Logout</string>
    <string name="action_settings">settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="sign_up_text">Dont have an account?Sign Up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">SIGN UP</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="signup_error_title">Ooops!</string>
    <string name="signup_error_message">Please enter a username,password and email address!</string>
    <string name="login_error_title">Ooops!</string>
    <string name="login_error_message">Please enter a username and password</string>
    <string name="empty_inbox_label">no new messages</string>
    <string name="empty_friends_label">add friends to begin</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_title">We\'re Sorry!</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">"There is a problem accessing your device\'s external storage"</string>
    <string name="general_error">Sorry, there was an error</string>
    <string name="video_file_size_warning">The selected video must be less than 10 seconds long</string>
    <string name="error_opening_file">There was a problem with the selected file</string>
    <string name="error_file_size_too_large">The selected file is too large,Please select a new File</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>choose video</item>
    </string-array>

    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list_message">Choose some friends first!</string>
    <string name="menu_send_label">Send</string>
    <string name="error_selecting_file">There was an error with the file chosen, Please Choose a different file</string>
    <string name="error_selecting_file_title">We\'re Sorry!</string>
    <string name="success_message">Message Sent</string>
    <string name="error_sending_message">There was an error sending your message, Please try again</string>
    <string name="title_activity_view_image">SnapShare</string>
    <string name="content_desc_background">SnapShare background Image</string>
    <string name="subtitle">A place to connect with friends</string>
    <string name="content_desc_button_divider">Button Divider</string>
    <string name="content_desc_message_icon">Message Icon</string>
    <string name="content_desc_user_avatar">user avatar</string>
    <string name="content_desc_user_checkMark">user checkmark</string>
    <string name="push_message">You have a new SnapShare message from %s!</string>
    <string name="follower_push_message">%s just followed you!</string>
    <string name="facebook_app_id">483877595101285</string>

</resources>
